--- a/views/books.ejs
+++ b/views/books.ejs
@@ -19,7 +19,7 @@
           <div class="card-columns">
             <% allBooksArr.forEach(book => { %>
             <!-- Book Cover, Title & Description -->
-            <div class="card p-3">
+            <div id="rounded-radius"  class="card p-4">
               <img
                 class="card-img-top shadow"
                 src="<%=book.book_cover%>"
