--- a/views/collection-id.ejs
+++ b/views/collection-id.ejs
@@ -153,7 +153,7 @@
 
                              <!-- Edit note text -->
                               <div class="modal-body mx-2">
-                                <textarea type="text" rows="4" class="form-control w-100 my-2 p-2 text-left lead" name="editNoteDescription" autofocus><%=note.description%></textarea>
+                                <textarea type="text" rows="4" id="edit-note" class="form-control w-100 my-2 p-2 text-left lead" name="editNoteDescription" autofocus><%=note.description%></textarea>
                               </div>
 
                               <!-- Start of Save Edited Note Button -->
