--- a/views/visitor-navbar.ejs
+++ b/views/visitor-navbar.ejs
@@ -25,7 +25,7 @@
     </li>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link text-dark" href="/login">Log In</a>
+        <a class="nav-link text-dark font-weight-light" href="/login">Log In</a>
       </li>
     </ul>
   </div>
