--- a/views/root.ejs
+++ b/views/root.ejs
@@ -56,7 +56,7 @@
                 </div>
                 <!-- Start of Form -->
                 <div class="modal-body">
-                  <form method="POST" action="/login">
+                  <form method="POST" action="/signup">
                     <div class="container">
                       <!-- Form Details -->
                       <div class="form-group row">
@@ -70,6 +70,7 @@
                             type="text"
                             class="form-control"
                             id="userName"
+                            name="name"
                             placeholder="Name"
                           />
                         </div>
@@ -85,6 +86,7 @@
                           <input
                             type="email"
                             class="form-control"
+                            name="email"
                             id="userEmail"
                             placeholder="Email"
                           />
@@ -100,8 +102,9 @@
                           <input
                             type="password"
                             class="form-control"
+                            name="password"
                             id="userPassword"
-                            placeholder="Password"
+                            placeholder="*******"
                           />
                         </div>
                       </div>
@@ -137,7 +140,7 @@
                             </button>
                             <button
                               id="rounded-radius"
-                              type="button"
+                              type="submit"
                               class="btn btn-dark px-3 mx-1"
                             >
                               Sign Up
