--- a/views/books-id.ejs
+++ b/views/books-id.ejs
@@ -17,7 +17,7 @@
               <div class="row">
                 <!-- Book Image -->
                 <div class="col d-flex justify-content-center">
-                  <img class="library-img shadow-sm mx-3" src="/public/library.jpg" />
+                  <img class="library-img shadow-sm mx-3" src="<%=singleBook.book_cover%>" />
                 </div>
               </div> 
 
