--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,10 +9,11 @@
 </head>
 <body>
   <div id="error-bg" class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <h1>We all need a little breakthrough sometimes...</h1>
-        <h5>Please try again</h5>
+    <div class="row p-5">
+      <div class="col mt-5">
+        <h1 class="pb-1 error text-dark">Error Occurred</h1>
+        <h2 class="error">We all need a little breakthrough sometimes...</h2>
+        <h5 class="error pt-3 font-italic">Please try again</h5>
       </div>
     </div>
   </div>
