--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%- include('head-links') -%>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Log In</title>
   </head>
   <body>
@@ -51,7 +54,7 @@
                   <button
                     id="rounded-radius"
                     type="submit"
-                    class="btn btn-dark px-5 mt-2 mb-3"
+                    class="btn-block btn-dark p-2 mt-5 mb-3"
                   >
                     Log in
                   </button>
