--- a/views/user-navbar.ejs
+++ b/views/user-navbar.ejs
@@ -57,12 +57,16 @@
             <!-- End of User Icon -->
           </a>
           <!-- Start of Dropdown Menu Itmes -->
-          <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">My Settings</a>
-            <a class="dropdown-item" href="#">Invite a Friend</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Logout</a>
-          </div>
+         
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="#">My Settings</a>
+              <a class="dropdown-item" href="#">Invite a Friend</a>
+              <div class="dropdown-divider"></div>
+              <form method="POST" action="/logout?_method=DELETE">
+                <button type="submit" class="dropdown-item btn">Logout</button>
+              </form>
+            </div>
+          
           <!-- End of Dropdown Menu Items -->
         </div>
       </li>
