--- a/views/collection-id.ejs
+++ b/views/collection-id.ejs
@@ -8,25 +8,69 @@
   <title><%=singleBook.title%> by <%=singleBook.authors_names%></title>
 </head>
 <body>
-  <!-- KIV: Address the fact that visitors are able to access this section -->
   <%- include('user-navbar') -%>
-
 
         <!-- Start of Progress Bar -->
         <div class="container w-50">
           <div class="row mt-2">
             <div class="col text-left">
               <div class="font-weight-light font-italic text-muted my-2" style="font-size: 0.7rem">
-                Pages Completed
+                Pages Completed: <%=singleBook.pages_completed%> / <%=singleBook.num_pages%>
               </div>
             </div>
           </div>
-          <div class="row mb-3">
+          <div class="row mb-1">
             <div class="col text-center">
               <div class="progress">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"> 38 / 336
+                <div id="pbar"class="progress-bar progress-bar-striped" role="progressbar" style="width: <%=singleBook.pct_complete%>%" aria-valuenow="<%=singleBook.pages_completed%>" aria-valuemin="0" aria-valuemax="<%=singleBook.pages_completed%>"> <%=singleBook.pct_complete%>%
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="row mt-1">
+            <div class="col text-center ">
+              <button class="btn" data-toggle="modal" data-target="#modalForPages"><span class="font-weight-light text-muted font-italic">Edit Pages &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+              <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+              </svg></span></button> 
+              <!-- Start of Modal Section -->
+              <!-- Modal -->
+              <div class="modal fade" id="modalForPages" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="modalLabel">Update Pages</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+
+                    <!-- Start of Form for Pages Edit  -->
+                    <form method="POST" action="/collection/<%=singleBook.book_id%>/pages?_method=PUT">
+                      <div class="modal-body">
+                        <div class="container ">
+                          <div class="row">
+                            <div class="col-6">
+                            <label for="pagesCompleted" class="font-weight-light">Pages Completed:</label><br>
+                            <input id="edit-pages-input" class="px-2 mx-1"  type="number" name="pagesCompleted" value="<%=singleBook.pages_completed%>"/>
+                            </div>
+                            <div class="col-6">
+                              <label for="totalPages" class="font-weight-light">Total Pages:</label><br>
+                              <input id="edit-pages-input" class="px-2 mx-1" type="number" name="totalPages" value="<%=singleBook.num_pages%>"/>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button id="rounded-radius" type="button" class="btn btn-sm btn-secondary px-3" data-dismiss="modal">Close</button>
+                        <button id="rounded-radius" type="submit" class="btn btn-sm btn-dark px-3">Edit Complete</button>
+                      </div>
+                    </form>
+                    <!-- End of Form for Pages Edit  -->
+                  </div>
+                </div>
+              </div>
+              <!-- End of Modal Section  -->   
+          
             </div>
           </div>
         </div>
@@ -38,17 +82,17 @@
               <div class="row">
                 <!-- Book Image -->
                 <div class="col d-flex justify-content-center">
-                  <img class="library-img shadow-sm mx-3" src="/public/library.jpg" />
+                  <img class="library-img shadow-sm mx-3" src="<%=singleBook.book_cover%>" />
                 </div>
               </div> 
 
-              <!-- Start of Edit Cover -->
+              <!-- Start of Upload Cover -->
               <div class="row mt-2 mb-2 mx-auto w-75">
                 <div class="col"> 
                       <button class="btn" data-toggle="modal" data-target="#modalNotification"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
                         <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
                         <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
-                      </svg> &nbsp; Edit Cover </button>                  
+                      </svg> &nbsp; Upload Cover </button>                  
                 </div>
               </div> 
               <!-- End of Add To Collection -->
@@ -102,9 +146,9 @@
           <!-- Start of + new Note Row -->
           <div class="row ">
             <div class="col w-75">
-              <h1 class="text-center mt-5 mb-3">My Notes</h1>
+              <h1 id="my-notes" class="text-center mt-5 mb-3">My Notes</h1>
               <!-- Start of New Note Form -->
-              <form method="POST" action="/notes/<%=singleBook.book_id%>/<%=singleBook.book_rank%>" class="text-center">
+              <form method="POST" action="/notes/<%=singleBook.book_id%>/<%=singleBook.book_rank%>#my-notes" class="text-center">
                  <div class="form-group d-flex justify-content-center">
                   <textarea id="note-size" class="form-control p-3 lead shadow-sm" rows="3" name="description" placeholder="What's on your mind?..."></textarea>
                 </div>  
@@ -129,7 +173,15 @@
                     <p class="lead text-dark"><%=note.description%></p>
                     <hr class="my-3">
                     <div class="row">
-                      <div class="col text-right">
+                      <!-- Start of Switch Toggle (For Public Notes) -->
+                      <div class="col-6 text-left">
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                          <label class="form-check-label" for="flexSwitchCheckDefault">Make Public</label>
+                        </div>
+                      </div>
+                      <!-- End of Switch Toggle (For Public Notes) -->
+                      <div class="col-6 text-right">
                         <!-- Start of Edit Icon -->
                         <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#editNoteModal<%=index%>">
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -153,7 +205,7 @@
 
                              <!-- Edit note text -->
                               <div class="modal-body mx-2">
-                                <textarea type="text" rows="4" id="edit-note" class="form-control w-100 my-2 p-2 text-left lead" name="editNoteDescription" autofocus><%=note.description%></textarea>
+                                <textarea id="rounded-radius" type="text" rows="4" id="edit-note" class="form-control w-100 my-2 p-4 text-left lead" name="editNoteDescription" autofocus><%=note.description%></textarea>
                               </div>
 
                               <!-- Start of Save Edited Note Button -->
