--- a/views/visitor-navbar.ejs
+++ b/views/visitor-navbar.ejs
@@ -18,7 +18,7 @@
   </button>
   <div id="navbar-menu" class="collapse navbar-collapse">
     <li class="nav-item d-flex align-self-start">
-      <a class="nav-link text-dark font-weight-light" href="#">How It Works</a>
+      <a class="nav-link text-dark font-weight-light" href="/#how-it-works">How It Works</a>
     </li>
     <li class="nav-item d-flex align-self-start">
       <a class="nav-link text-dark font-weight-light" href="/books">All Books</a>
