Change collection/:id/pages to /collection/:book_id/:bookrank_id

--- a/views/collection-table.ejs
+++ b/views/collection-table.ejs
@@ -46,7 +46,9 @@
                   </th>
                 </tr>
               </thead>
-              <!-- Include Sorting here -->
+
+              <!--  Sorting logic -->
+              <% console.log('in ejs: ----',collectionArr) %>
 
               <!-- Book data -->
               <!-- Display each sighting -->
