--- a/views/collection-id.ejs
+++ b/views/collection-id.ejs
@@ -45,7 +45,7 @@
                     </div>
 
                     <!-- Start of Form for Pages Edit  -->
-                    <form method="POST" action="/collection/<%=singleBook.book_id%>/pages?_method=PUT">
+                    <form method="POST" action="/collection/<%=singleBook.book_id%>/<%=singleBook.book_rank%>?_method=PUT">
                       <div class="modal-body">
                         <div class="container ">
                           <div class="row">
