--- a/views/collection-id.ejs
+++ b/views/collection-id.ejs
@@ -44,7 +44,7 @@
                       </button>
                     </div>
 
-                    <!-- Start of Form for Pages Edit  -->
+                    <!-- FORM 1: Start of Form for Pages Edit  -->
                     <form method="POST" action="/collection/<%=singleBook.book_id%>/<%=singleBook.book_rank%>/pages?_method=PUT">
                       <div class="modal-body">
                         <div class="container ">
@@ -65,7 +65,7 @@
                         <button id="rounded-radius" type="submit" class="btn btn-sm btn-dark px-3">Edit Complete</button>
                       </div>
                     </form>
-                    <!-- End of Form for Pages Edit  -->
+                    <!-- FORM 1:  End of Form for Pages Edit  -->
                   </div>
                 </div>
               </div>
@@ -93,10 +93,10 @@
               <!-- Start of Upload Cover -->
               <div class="row mt-2 mb-2 mx-auto w-75">
                 <div class="col"> 
-                      <button class="btn" data-toggle="modal" data-target="#modalNotification"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
-                        <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                        <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
-                      </svg> &nbsp; Upload Cover </button>                  
+                  <button class="btn" data-toggle="modal" data-target="#modalNotification"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
+                    <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                    <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
+                  </svg> &nbsp; Upload Cover </button>                  
                 </div>
               </div> 
               <!-- End of Add To Collection -->
@@ -113,7 +113,7 @@
                       </button>
                     </div>
 
-                    <!-- Start of Form for User Cover Upload -->
+                    <!-- FORM 2: Start of Form for User Cover Upload -->
                     <form method="POST" action="/collection/<%=singleBook.book_id%>/<%=singleBook.book_rank%>" enctype="multipart/form-data">
                       <div class="modal-body text-left">
                         <label for="usercover" class="font-weight-light">Book Cover:</label><br>
@@ -124,7 +124,7 @@
                         <button id="rounded-radius" type="submit" class="btn btn-sm btn-dark px-3">Upload File</button>
                       </div>
                     </form>
-                    <!-- End of Form for User Cover Upload -->
+                    <!-- FORM 2: End of Form for User Cover Upload -->
                   </div>
                 </div>
               </div>
@@ -143,15 +143,13 @@
         </div>
       </div>
 
-
-
         <!-- All Users' Notes -->
         <div id="blue-palette-bg" class="container-fluid users-notes mt-1">
           <!-- Start of + new Note Row -->
-          <div class="row ">
+          <div class="row">
             <div class="col w-75">
               <h1 id="my-notes" class="text-center mt-5 mb-3">My Notes</h1>
-              <!-- Start of New Note Form -->
+              <!-- FORM 3: Start of New Note Form -->
               <form method="POST" action="/notes/<%=singleBook.book_id%>/<%=singleBook.book_rank%>#my-notes" class="text-center">
                  <div class="form-group d-flex justify-content-center">
                   <textarea id="note-size" class="form-control p-3 lead shadow-sm" rows="3" name="description" placeholder="What's on your mind?..."></textarea>
@@ -162,7 +160,7 @@
                   </svg>
                 </button>
               </form>
-              <!-- End of New Note Form -->
+              <!-- FORM 3: End of New Note Form -->
               <hr id="white-divide" class="mb-5">
             </div>
           </div>  
@@ -172,28 +170,33 @@
             <!-- Start of Inidividual Notes-->
             <% userNotesArr.forEach((note, index) => { %>
               <div class="col-12 d-flex justify-content-center">
-                <form method=POST>
+                <!-- FORM 4: Start of Individual Edit Notes form -->
+                <form method=POST action="/notes/<%=note.id%>/<%=singleBook.book_rank%>?_method=PUT">
                   <div id="note-size" class="jumbotron shadow-sm rounded px-5 mx-5">
                     <p class="lead text-dark"><%=note.description%></p>
                     <hr class="my-3">
                     <div class="row">
                       <!-- Start of Switch Toggle (For Public Notes) -->
-                      <div class="col-6 text-left">
-                        <div class="form-check form-switch">
-                          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                          <label class="form-check-label" for="flexSwitchCheckDefault">Make Public</label>
+                      <div class="col-5 text-left">
+                        <div class="custom-control custom-switch">
+                          <% if (note.private === false) { %> 
+                            <input type="checkbox" class="custom-control-input" id="customSwitch<%=index%>" name="makePublic" checked>
+                          <% } else if (note.private === true) { %> 
+                            <input type="checkbox" class="custom-control-input" id="customSwitch<%=index%>" name="makePublic">
+                          <% } %> 
+                          <input type="hidden" name="makePublic" value="false"> 
+                          <label class="custom-control-label text-muted" for="customSwitch<%=index%>">Make Public</label>
                         </div>
                       </div>
                       <!-- End of Switch Toggle (For Public Notes) -->
-                      <div class="col-6 text-right">
+                      <div class="col-7 text-right">
                         <!-- Start of Edit Icon -->
-                        <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#editNoteModal<%=index%>">
+                        <button type="button" id="edit-note-btn" class="btn btn-sm px-3" data-toggle="modal" data-target="#editNoteModal<%=index%>">
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                           <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                           <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                           </svg>
                         </button>
-
 
                         <!-- Start of Edit Notes Form Modal -->
                         <div class="modal fade" id="editNoteModal<%=index%>" tabindex="-1" role="dialog" aria-labelledby="editNoteModalTitle" aria-hidden="true">
@@ -215,7 +218,7 @@
                               <!-- Start of Save Edited Note Button -->
                               <div class="modal-footer w-75 mx-auto my-2">
                                 <button type="button" id="rounded-radius" class="btn btn-light" data-dismiss="modal">Close</button>
-                                <button type="submit" formaction="/notes/<%=userNotesArr[0].id%>/<%=singleBook.book_rank%>?_method=PUT" id="rounded-radius" class="btn btn-dark px-4">Save</button>
+                                <button type="submit" formaction="/notes/<%=note.id%>/<%=singleBook.book_rank%>?_method=PUT" id="rounded-radius" class="btn btn-dark px-4">Save</button>
                               </div>
                               <!-- End of Save Edited Note Button -->
 
@@ -226,7 +229,7 @@
                         <!-- End of Edit Icon -->
                     
                         <!-- Start of Delete Icon -->
-                        <button type="submit" class="btn btn-sm px-1" formaction="/notes/<%=userNotesArr[0].id%>/<%=singleBook.book_rank%>?_method=DELETE" value="DELETE"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                        <button type="submit" id="edit-note-btn" class="btn btn-sm ml-1" formaction="/notes/<%=note.id%>/<%=singleBook.book_rank%>?_method=DELETE" value="DELETE"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
                         <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                         </svg></button>
@@ -235,9 +238,9 @@
                     </div>
                   </div>
                 </form>
+                <!-- FORM 4: Start of Individual Edit Notes form -->
               </div>
             <% }) %> 
-            <!-- End of Inidividual Notes-->
           </div>
       </div>
 
